--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<section id="todoapp">
 			<header id="header">
 				<h1>todos</h1>
+				<input type= "checkbox" class = "new-todo-priority">
+				<label for = "new-todo-priority">Make new todo a priority</label>
 				<input id="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<section id="main">
@@ -27,7 +29,7 @@
 			<div class="view">
 				<input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
 				<label><%- title %><%= completed ? '--done!' : '' %></label>
-				<button class="priority-btn"</button>
+				<button class="priority-btn"></button>
 				<button class="edit-btn"></button>
 				<button class="destroy"></button>
 			</div>
@@ -45,6 +47,7 @@
 				<li>
 					<a href="#/completed">Completed</a>
 				</li>
+				<li href = "#/priority">Priority</a>
 			</ul>
 			<% if (completed) { %>
 			<button id="clear-completed">Clear completed (<%= completed %>)</button>
