--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 		<section id="todoapp">
 			<header id="header">
 				<h1>todos</h1>
-				<input type= "checkbox" class = "new-todo-priority">
-				<label for = "new-todo-priority">Make new todo a priority</label>
+				<button class = "new-todo-priority"></button>
 				<input id="new-todo" placeholder="What needs to be done?" autofocus>
 			</header>
 			<section id="main">
