--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 		<section id="todoapp">
 			<header id="header">
 				<h1>todos</h1>
-				<button class = "new-todo-priority"></button>
 				<input id="new-todo" placeholder="What needs to be done?" autofocus>
+
 			</header>
 			<section id="main">
+				<button id="new-todo-priority"></button>
 				<input id="toggle-all" type="checkbox">
 				<label for="toggle-all">Mark all as complete</label>
 				<ul id="todo-list"></ul>
